--- a/style.css
+++ b/style.css
@@ -16,3 +16,8 @@ img {
 .card:hover {
   transform: scale(1.1);
 }
+
+.btn-pink {
+  background-color: rgba(255, 192, 203, 0.776);
+  border: 1px solid rgba(70, 70, 70, 0.737);
+}
